src/test/ui/consts/const-eval/const-eval-overflow-3.stderr
error: attempt to add with overflow
  --> $DIR/const-eval-overflow-3.rs:30:11
   |
LL |     = [0; (i8::MAX + 1) as usize];
   |           ^^^^^^^^^^^^^
   |
   = note: #[deny(const_err)] on by default

error[E0080]: could not evaluate repeat length
  --> $DIR/const-eval-overflow-3.rs:30:11
   |
LL |     = [0; (i8::MAX + 1) as usize];
   |           -------------^^^^^^^^^
   |           |
   |           attempt to add with overflow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
